--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com" rel="preconnect"/>
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700,0..1&display=swap" rel="stylesheet"/>
+    <!-- URL de Material Symbols con todos los parámetros de variación -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=block" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -31,8 +32,34 @@
         body { background-color: #0a0c10; min-height: 100vh; margin: 0; padding: 0; overflow-x: hidden; }
         #root { min-height: 100vh; }
         .no-scrollbar::-webkit-scrollbar { display: none; }
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .animate-fade { animation: fadeIn 0.5s ease-out; }
+        
+        /* FIX CRÍTICO PARA ICONOS */
+        .material-symbols-outlined {
+            font-family: 'Material Symbols Outlined' !important;
+            font-weight: normal;
+            font-style: normal;
+            font-size: 24px;
+            line-height: 1;
+            letter-spacing: normal;
+            text-transform: none;
+            display: inline-block;
+            white-space: nowrap;
+            word-wrap: normal;
+            direction: ltr;
+            -webkit-font-feature-settings: 'liga';
+            -webkit-font-smoothing: antialiased;
+            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+            
+            /* Seguridad contra carga lenta: el texto se oculta si no luga */
+            width: 24px;
+            height: 24px;
+            overflow: hidden;
+            text-align: center;
+            user-select: none;
+        }
+
+        /* Asegurar que el contenedor móvil no se rompa */
+        nav { max-width: 100%; }
     </style>
     <script type="importmap">
 {
@@ -50,13 +77,7 @@
 </script>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-gray-900 dark:text-gray-100">
-    <div id="root">
-        <div id="loader" style="height: 100vh; display: flex; align-items: center; justify-content: center; background: #0a0c10; color: #136dec; flex-direction: column; font-family: sans-serif;">
-            <div style="width: 40px; height: 40px; border: 4px solid #136dec; border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite;"></div>
-            <p style="margin-top: 20px; font-weight: bold; letter-spacing: 2px; font-size: 10px;">INICIALIZANDO NEUROBOT...</p>
-        </div>
-    </div>
-    <style>@keyframes spin { to { transform: rotate(360deg); } }</style>
+    <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
